[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pastro"
version = "0.1.0"
description = ""
authors = [
  {name = "Alfonso Sánchez Rodríguez", email = "a.sanchezrodriguez@student.tudelft.nl"},
]
requires-python = ">=3.10"
dependencies = [
	"pyyaml>=6.0",
	"sgp4>=2.23",
	"numpy>=1.26",
	"matplotlib>=3.8.2",
	"requests>=2.31"	
]
optional-dependencies = [
	"pytest>=7.2",
	"mypy>=0.991",
	"flake8>=6.0",
	"autopep8>=2.0"
]


[tool.pytest.ini.options]
testpaths = ["src/pastro/tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = false
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
